syntax = "proto3";

package posts;

option go_package = "./gen/posts";

import "google/protobuf/timestamp.proto";

service PostsService {
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc GetPost(GetPostRequest) returns (Post);
    rpc GetAllPosts(EmptyRequest) returns (GetAllPostsResponse);
}

message Post {
    int64 id = 1;
    string title = 2;
    string body = 3;
    int64 authorId = 4;
    google.protobuf.Timestamp createdAt = 5;  
}

message CreatePostRequest {
    string title = 1;
    string body = 2;
    int64 authorId = 3;
}

message GetPostRequest {
    int64 id = 1;
}

message GetAllPostsResponse {
    repeated Post posts = 1; 
}

message EmptyRequest {}
